--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
    <head>
        <link rel="stylesheet" href="index.css">
+       <meta charset="UTF-8">
    </head>
    <body>    
        <div class="nav-bar">
@@ -13,6 +14,6 @@
        <div class="container">
          <h5 id="reviews"></h5>         
        </div>
-       <script src="index.pack.js"></script>
+       <script src="index.js"></script>
    </body>
 </html>
