--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
    <head>
-       <link rel="stylesheet" href="index.css">
+       <link rel="stylesheet" href="/public/index.css">
        <meta charset="UTF-8">
    </head>
    <body>    
@@ -14,6 +14,6 @@
        <div class="container">
          <h5 id="reviews"></h5>         
        </div>
-       <script src="index.js"></script>
+       <script type="module" src="index.js"></script>
    </body>
 </html>
